# proyecto-sistemas-inteligentes

./: README.md  pyproject.toml
cof/base/: catalog.yml  parameters.yml
data/08_reporting/: resultado_analisis.json
laboratorio2_ia/: pyproject.toml  requirements.txt
laboratorio2_ia/src/: main.py
laboratorio2_ia/src/image_processing/: __init__.py  loader.py  main.py  transform.py
laboratorio2_ia/tests/: test_transform.py
src/laboratorio3_kedro/: __init__.py  pipeline_registry.py  settings.py
src/laboratorio3_kedro/pipelines/histogram/: __init__.py  analyzer.py  nodes.py  pipeline.py
tests/: test_analyzer.py
